# sber_task

./: .gitignore  README.md  pyproject.toml
research/: research.ipynb
