[tool.poetry]
name = "sber"
version = "0.1.0"
description = ""
authors = ["Marusya <pavlenkoma13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
tqdm = "^4.67.0"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
